@@ -4,13 +4,13 @@
   <parent>
     <groupId>org.fcrepo</groupId>
     <artifactId>fcrepo-parent</artifactId>
-    <version>6.6.0-SNAPSHOT</version>
+    <version>6.5.1</version>
     <relativePath>./fcrepo-parent</relativePath>
   </parent>
 
   <groupId>org.fcrepo</groupId>
   <artifactId>fcrepo</artifactId>
-  <version>6.6.0-SNAPSHOT</version>
+  <version>6.5.1</version>
   <name>Fedora Commons</name>
   <description>Parent project for Fedora Commons Repository</description>
   <url>http://fedorarepository.org</url>
@@ -30,7 +30,7 @@
     <caffeine.version>3.0.4</caffeine.version>
     <commons-codec.version>1.15</commons-codec.version>
     <commons-collections.version>3.2.2</commons-collections.version>
-    <commons-io.version>2.11.0</commons-io.version>
+    <commons-io.version>2.14.0</commons-io.version>
     <commons-lang.version>3.12.0</commons-lang.version>
     <failsafe.version>2.4.4</failsafe.version>
     <flyway.version>9.22.3</flyway.version>
@@ -60,12 +60,12 @@
     <logback.version>1.2.13</logback.version>
     <micrometer.version>1.7.4</micrometer.version>
     <netty.version>4.1.68.Final</netty.version>
-    <ocfl-java.version>2.1.0</ocfl-java.version>
+    <ocfl-java.version>2.2.1</ocfl-java.version>
     <prometheus.version>0.10.0</prometheus.version>
     <reactivestreams.version>1.0.3</reactivestreams.version>
     <shiro.version>1.13.0</shiro.version>
     <slf4j.version>1.7.32</slf4j.version>
-    <spring.version>5.3.27</spring.version>
+    <spring.version>5.3.39</spring.version>
     <xerces.version>2.12.2</xerces.version>
     <xml-apis.version>1.4.01</xml-apis.version>
     <velocity.version>1.7</velocity.version>
@@ -77,6 +77,7 @@
     <awaitility.version>4.1.0</awaitility.version>
     <grizzly.version>2.4.4</grizzly.version>
     <junit.version>4.13.2</junit.version>
+    <junit5.version>5.11.4</junit5.version>
     <system-rules.version>1.19.0</system-rules.version>
     <mockito.version>3.12.4</mockito.version>
     <!-- fcrepo5-specific plugins -->
@@ -614,6 +615,12 @@
         <scope>test</scope>
       </dependency>
       <dependency>
+        <groupId>org.junit.jupiter</groupId>
+        <artifactId>junit-jupiter</artifactId>
+        <version>${junit5.version}</version>
+        <scope>test</scope>
+      </dependency>
+      <dependency>
         <groupId>org.hamcrest</groupId>
         <artifactId>hamcrest-all</artifactId>
         <version>1.3</version>
@@ -798,7 +805,7 @@
       <plugin>
         <artifactId>maven-failsafe-plugin</artifactId>
         <configuration>
-          <argLine>-XX:MaxMetaspaceSize=512m ${jacoco.agent.it.arg}</argLine>
+          <argLine>-XX:MaxMetaspaceSize=512m --add-opens=java.base/java.lang=ALL-UNNAMED ${jacoco.agent.it.arg}</argLine>
         </configuration>
       </plugin>
 
@@ -830,9 +837,7 @@
               <goals>
                 <goal>prepare-agent</goal>
               </goals>
-
               <configuration>
-                <destFile>${sonar.jacoco.reportPath}</destFile>
                 <propertyName>jacoco.agent.unit.arg</propertyName>
                 <append>true</append>
               </configuration>
@@ -843,7 +848,6 @@
                 <goal>prepare-agent-integration</goal>
               </goals>
               <configuration>
-                <destFile>${sonar.jacoco.itReportPath}</destFile>
                 <propertyName>jacoco.agent.it.arg</propertyName>
                 <append>true</append>
                 <excludes>
@@ -853,16 +857,48 @@
               </configuration>
             </execution>
             <execution>
-              <id>default-report</id>
+              <id>report</id>
+              <phase>verify</phase>
               <goals>
                 <goal>report</goal>
               </goals>
+              <configuration>
+                <outputDirectory>${project.build.directory}/jacoco</outputDirectory>
+                <xml>true</xml>
+                <html>false</html>
+                <csv>false</csv>
+              </configuration>
             </execution>
             <execution>
-              <id>default-report-integration</id>
+              <id>merge-coverage</id>
+              <phase>verify</phase>
               <goals>
-                <goal>report-integration</goal>
+                <goal>merge</goal>
               </goals>
+              <configuration>
+                <fileSets>
+                  <fileSet>
+                    <directory>${project.build.directory}</directory>
+                    <includes>
+                      <include>jacoco.exec</include>
+                      <include>jacoco-it.exec</include>
+                    </includes>
+                  </fileSet>
+                </fileSets>
+                <destFile>${project.build.directory}/jacoco/jacoco-merged.exec</destFile>
+              </configuration>
+            </execution>
+            <execution>
+              <id>generate-report</id>
+              <phase>verify</phase>
+              <goals>
+                <goal>report</goal>
+              </goals>
+              <configuration>
+                <dataFile>${project.build.directory}/jacoco/jacoco-merged.exec</dataFile>
+                <outputDirectory>${project.build.directory}/jacoco</outputDirectory>
+                <xml>true</xml>
+              </configuration>
             </execution>
           </executions>
       </plugin>
@@ -1066,7 +1102,7 @@
     <connection>scm:git:git://github.com/${project_organization}/${project_name}.git</connection>
     <developerConnection>scm:git:git@github.com:${project_organization}/${project_name}.git</developerConnection>
     <url>https://github.com/${project_organization}/${project_name}</url>
-    <tag>HEAD</tag>
+    <tag>fcrepo-6.5.1</tag>
   </scm>
 
 </project>
